# submilli-wasm

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml  fuzz.yml  release.yml
benches/: PERF-NOTES.md  README.md  lifecycle.rs  support.rs
docs/: ARCHITECTURE.md  PLAN.md  STYLE.md  TASKS.md  TESTING.md
examples/: bench_table.rs  prof_execute.rs  prof_module_new.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: differential.rs  interpret.rs  validate.rs
fuzz/src/: lib.rs
scripts/: check-line-count.sh  check-no-unsafe.sh  fetch-bench-wasm.sh
src/: backtrace.rs  config.rs  engine.rs  engine_tests.rs  error.rs  exception.rs  extern_.rs  extern_tests.rs  gc.rs  lib.rs  linker.rs  linker_tests.rs  trap.rs
src/canon/: keys.rs  layout.rs  layout_tests.rs  materialize.rs  mod.rs  registry.rs  registry_tests.rs
src/exec/: arith.rs  call.rs  cast.rs  cell.rs  cell_tests.rs  collect.rs  convert.rs  epoch.rs  exn.rs  frame.rs  gates.rs  gc.rs  gc_array.rs  guard.rs  host.rs  host_async.rs  memory.rs  mod.rs  numeric.rs  outcome.rs  ref_.rs  stack.rs  step.rs  table.rs  tests.rs  trace.rs
src/exec/simd/: bit.rs  cvt.rs  farith.rs  fcmp.rs  iarith.rs  iarith2.rs  icmp.rs  lane.rs  lanes.rs  mem.rs  mod.rs  relaxed.rs
src/func/: async_func.rs  async_limiter_tests.rs  async_tests.rs  async_yield_tests.rs  into_func.rs  mod.rs  tests.rs  wasm_ty.rs
src/instance/: const_eval.rs  init.rs  mod.rs  tests.rs
src/module/: code.rs  const_expr.rs  handler.rs  inner.rs  mod.rs  op.rs  op_simd.rs  op_types.rs  parse.rs  serialize.rs  typesec.rs
src/module/compile/: control.rs  conv.rs  core.rs  gc.rs  memory.rs  mod.rs  numeric.rs  ref_.rs  simd.rs  table.rs  tests.rs  visit.rs  visit_simd.rs
src/module/compile/control/: branch.rs  calls.rs  mod.rs  try_table.rs  visit.rs
src/module/debug/: func.rs  line.rs  mod.rs  tests.rs
src/module/debug/testdata/: fixture.rs  fixture.wasm  trap_chain.rs  trap_chain.wasm
src/store/: accessors.rs  arena.rs  context.rs  entity.rs  exn_tests.rs  gc.rs  gc_codec.rs  gc_collect.rs  gc_tests.rs  grow.rs  inner.rs  inner_gc.rs  limits.rs  limits_tests.rs  managed.rs  mod.rs  reclaim.rs
src/value/: exn_ref.rs  gc_aggregate.rs  gc_ref.rs  gc_type.rs  mod.rs  ref_const.rs  tag_type.rs  type_access.rs  types.rs  val.rs
src/value/rec_group/: builders.rs  lower.rs  mod.rs  template.rs  validate.rs
tests/: api.rs  async_api.rs  backtrace.rs  compat_alias.rs  compat_real.rs  exceptions.rs  gc_collect.rs  gc_cross_module.rs  gc_host.rs  gc_stress.rs  instantiation.rs  isolation.rs  memory64.rs  multi_memory.rs  panic_safety.rs  reentry.rs  references.rs  serialize.rs  simd.rs  spec.rs  stack_limit.rs  tags.rs  tail_call.rs  validation_limits.rs  zero_alloc.rs
tests/common/: embedder_example.rs
