[package]
name = "submilli-wasm"
version = "0.1.0"
edition = "2021"
description = "A WebAssembly interpreter with a wasmtime-compatible API, built for fast compilation and startup"
license = "Apache-2.0"
repository = "https://github.com/submilli/submilli-wasm"
readme = "README.md"
keywords = ["wasm", "webassembly", "interpreter", "wasmtime", "runtime"]
categories = ["wasm", "virtualization"]
# Ship only what `cargo build` needs; tests/benches/docs live on GitHub
# (the 12 MB spec-testsuite submodule must never end up in the package).
include = ["src/**", "Cargo.toml", "README.md", "LICENSE", "SECURITY.md"]

[package.metadata.docs.rs]
# Document the full surface: `async` and `simd` are off by default.
all-features = true

[lib]
name = "submilli_wasm"

[features]
default = []
async = ["dep:async-trait"]
# Fixed-width SIMD (`v128`, #37). Off by default to keep the SIMD-free build's
# compile time / binary size lean; enable for the full Wasm-3.0 surface.
simd = []

[dependencies]
wasmparser = "0.252"
anyhow = "1.0"
# DWARF parsing for symbolicated backtraces (Phase 7); used lazily, off the compile path.
# Pinned to the version already resolved transitively (avoids a duplicate copy in the tree).
gimli = { version = "0.33", default-features = false, features = ["read", "std"] }
async-trait = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive", "rc"] }
postcard = { version = "1", features = ["use-std"] }

[dev-dependencies]
wast = "252"
wat = "1"
wasmtime = "=45.0.2"
pollster = "0.3"
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
wasmi = "=2.0.0-beta.4"

# Cross-engine lifecycle benchmark (Store/Module::new/instantiate/execution vs
# wasmtime + wasmi). See benches/support.rs; summary table: examples/bench_table.rs.
[[bench]]
name = "lifecycle"
harness = false

[lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
too_many_lines = "warn"
too_many_arguments = "warn"
type_complexity = "warn"
cognitive_complexity = "warn"
unwrap_used = "warn"
dbg_macro = "warn"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
similar_names = "allow"
doc_markdown = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
# wasm `f32x4.convert_i32x4` etc. are defined to round — precision loss is the semantics (#37).
cast_precision_loss = "allow"
